force-app/main/default/objects/GetFeedback_Survey__c/GetFeedback_Survey__c.object-meta.xml
<CustomObject>
    <description>GetFeedback Survey object is used to house all GetFeedback surveys.</description>
    <label>GetFeedback Survey</label>
    <nameField>
        <label>GetFeedback Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GetFeedback Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>