force-app/main/default/objects/GetFeedback_Survey__c/fields/CFF_Q1_Verbatim_Question__c.field-meta.xml
<CustomField>
    <fullName>CFF_Q1_Verbatim_Question__c</fullName>
    <description>1a) What are the main reasons for giving a score of [gf_q1] out of 10?</description>
    <label>CFF Q2 - NPS Verbatim</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>