force-app/main/default/objects/GetFeedback_Survey__c/fields/CFF_Q2_Was_it_resolved__c.field-meta.xml
<CustomField>
    <fullName>CFF_Q2_Was_it_resolved__c</fullName>
    <description>2. Was your enquiry resolved? Press 1 for yes, press 2 for no or press 3 for too early to tell.</description>
    <label>CFF Q3 – Was it resolved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Too early to tell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>