force-app/main/default/objects/GetFeedback_Survey__c/fields/CIAQ2Satisfiedwithresolution__c.field-meta.xml
<CustomField>
    <fullName>CIAQ2Satisfiedwithresolution__c</fullName>
    <description>Were you satisfied that your query was resolved in an effective manner?</description>
    <inlineHelpText>Were you satisfied that your query was resolved in an effective manner?</inlineHelpText>
    <label>CIA Q2 - Satisfied with resolution</label>
    <length>2</length>
    <type>Text</type>
</CustomField>