force-app/main/default/objects/GetFeedback_Survey__c/fields/NPSResult__c.field-meta.xml
<CustomField>
    <fullName>NPSResult__c</fullName>
    <formula>If(IsNull(NPSScore__c),&quot;Null&quot;, 
If(NPSScore__c&lt;7,&apos;Detractors&apos;, 
If(NPSScore__c&gt;8,&apos;Promoters&apos;,&apos;Passive&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Result</label>
    <type>Text</type>
</CustomField>