force-app/main/default/objects/GetFeedback_Survey__c/fields/SEI_Q4_Recommend__c.field-meta.xml
<CustomField>
    <fullName>SEI_Q4_Recommend__c</fullName>
    <description>SEI Question 4 - Would you recommend StarTrack to other Business Sales staff, based on this experience?</description>
    <label>SEI - Q4 Recommend</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>