force-app/main/default/objects/GetFeedback_Survey__c/fields/SI_CFF_Q1_Requirements_Score__c.field-meta.xml
<CustomField>
    <fullName>SI_CFF_Q1_Requirements_Score__c</fullName>
    <description>I am satisfied that my customer&apos;s requirements have been captured &amp; understood by my Implementation Consultant.</description>
    <inlineHelpText>I am satisfied that my customer&apos;s requirements have been captured &amp; understood by my Implementation Consultant.</inlineHelpText>
    <label>SI-CFF - Q1 Requirements Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>