force-app/main/default/objects/GetFeedback_Survey__c/fields/SI_CFF_Q9_Additional_Verbatim__c.field-meta.xml
<CustomField>
    <fullName>SI_CFF_Q9_Additional_Verbatim__c</fullName>
    <description>We appreciate you taking the time to give your honest &amp; constructive feedback on your implementation experience with us.  If you have any additional comments about your implementation experience please share these with us below.</description>
    <inlineHelpText>We appreciate you taking the time to give your honest &amp; constructive feedback on your implementation experience with us.  If you have any additional comments about your implementation experience please share these with us below.</inlineHelpText>
    <label>SI-CFF - Q9 Additional Verbatim</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>