force-app/main/default/objects/GetFeedback_Survey__c/recordTypes/Business_Sales_Implementation.recordType-meta.xml
<RecordType>
    <fullName>Business_Sales_Implementation</fullName>
    <active>true</active>
    <description>Business Sales Implementation Record Type</description>
    <label>Business Sales Implementation</label>
</RecordType>