force-app/main/default/objects/GetFeedback_Survey__c/recordTypes/Business_Systems.recordType-meta.xml
<RecordType>
    <fullName>Business_Systems</fullName>
    <active>true</active>
    <description>.</description>
    <label>Business Systems</label>
</RecordType>