force-app/main/default/objects/GetFeedback_Survey__c/recordTypes/CFF_Service_Delivery.recordType-meta.xml
<RecordType>
    <fullName>CFF_Service_Delivery</fullName>
    <active>true</active>
    <description>.</description>
    <label>CFF - Service Delivery</label>
</RecordType>