force-app/main/default/objects/GetFeedback_Survey__c/recordTypes/E_G_Sales_Implementation.recordType-meta.xml
<RecordType>
    <fullName>E_G_Sales_Implementation</fullName>
    <active>true</active>
    <description>Record type for the E&amp;G Sales Implementation Team</description>
    <label>E&amp;G Sales Implementation</label>
</RecordType>