force-app/main/default/objects/GetFeedback_Survey__c/recordTypes/General_Survey.recordType-meta.xml
<RecordType>
    <fullName>General_Survey</fullName>
    <active>true</active>
    <description>.</description>
    <label>General Survey</label>
</RecordType>